Implement Get Estate Stats API and Function name adjustment
